# creative-launch-workspace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
.impeccable/: design.json
.impeccable/live/: config.json
docs/: 404.html  brief-evidence.html  case-study.html  fix-lab.html  index.html  robots.txt  sitemap.xml  social-card.html  workspace.html
docs/ai/: evaluation.md  model_card.md
docs/architecture/: rfc_0001_launch_workspace_app_architecture.md  system.md
docs/assets/: brief-evidence.avif  guided-review-step-1.avif  guided-review-step-3.avif  launch-control-core-v3.avif  launch-control-motion.css  launch-control-motion.js  (+2 more)
fixtures/: synthetic_campaign_brief.txt  synthetic_creative_template.csv
frontend/: demo-payload.json  hero-mesh.js  launch-control-motion.css  launch-control-motion.jsx  launch-control-theme.mjs
meta_importer/: __init__.py  asset_validation.py  browser_qa.py  cli.py  clock.py  demo_payload.py  fix_lab.py  html_quality.py  launch_workspace.py  local_store.py  platform_payload_preview.py  portfolio_page.py  portfolio_v19.py  portfolio_v20.py  product_landing_v21.py  product_landing_v22.py  product_landing_v30.py  product_page.py  review_policy.py  sales_readiness.py  sqlite_store.py  workspace_state.py
scripts/: build_landing_ui.mjs  check_golden_artifacts.py  enrich_fixture_v2.py  materialize_synthetic_assets.py  rebuild_ai_evidence.py  rebuild_fix_lab.py  rebuild_portfolio_page.py  rebuild_product_page.py  workspace_browser_qa.py  workspace_runtime_qa.mjs
tests/: test_ai_brief_mapping.py  test_launch_workspace.py  test_portfolio_surface.py  test_product_surface.py  test_sales_readiness.py
(+76 files in other folders)
