[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "creative-launch-workspace"
version = "1.2.0"
description = "Governed AI-assisted brief intake and offline creative launch review"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Mathieu Petroni" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://mattyu-dev.github.io/creative-launch-workspace/"
Repository = "https://github.com/mattyu-dev/creative-launch-workspace"

[project.optional-dependencies]
ai = ["openai>=2.0,<3"]
dev = [
  "coverage[toml]>=7.6,<8",
  "mypy>=1.15,<2",
  "ruff>=0.12,<1",
]

[project.scripts]
creative-launch = "meta_importer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["meta_importer"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "UP017"]

[tool.ruff.lint.per-file-ignores]
"scripts/check_golden_artifacts.py" = ["E402"]
"scripts/workspace_browser_qa.py" = ["E402"]
"scripts/rebuild_ai_evidence.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["runs/"]

[tool.coverage.run]
branch = true
source = ["meta_importer"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
